packages/svelte/tests/compiler-errors/samples/invalid-snippet-mutation/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-snippet-assignment',
		message: 'Cannot reassign or bind to snippet parameter'
	}
});
